# BenderBox

./: .gitignore  ARCHITECTURE_REVIEW.md  BenderBox_ASCII.txt  DELIVERY_SUMMARY.md  INFRASTRUCTURE_ANALYSIS_DESIGN.md  INFRASTRUCTURE_ANALYSIS_GUIDE.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  V2_IMPLEMENTATION_SUMMARY.md  aegisml_dynamic_tests.py  aegisml_infrastructure_tests.py  aegisml_interactive.py  aegisml_mcp_analyzer.py  aegisml_mcp_server.py  aegisml_sandbox_cli.py  aegisml_skill_analyzer.py  bb.bat  bb.py  install.bat  install.sh  pyproject.toml  pytest.ini  requirements.txt  run.bat  run.py  setup_wizard.py  test_malicious_mcp_server.py
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: benderbox.yaml
configs/mcp-profiles/: security.yaml
configs/profiles/: adversarial.yaml  fingerprint.yaml  full.yaml  quick.yaml  standard.yaml
configs/profiles/custom/: example.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_PLAN_V3.md  GAP_REMEDIATION_PLAN.md  GAP_REMEDIATION_PROGRESS.md  IMPLEMENTATION_PLAN.md  MCP_TOOLS.md  SKILL_GUIDE.md  USER_WORKFLOW.md  guide.html
docs/architecture/: MODEL_INTERROGATION.md
examples/: README.md
examples/mcp_servers/: sample_vulnerable_server.py
examples/prompts/: custom_interrogations.md  risky_system_prompt.md  safe_system_prompt.md
examples/skills/: analyze_gguf_model.md  analyze_mcp_server.md  analyze_skill_security.md  detect_model_jailbreaks.md
scripts/: install-prerequisites.ps1  install-prerequisites.sh  setup.py
skills/: analyze_gguf_model.md  analyze_mcp_server.md  analyze_skill_security.md  compare_infrastructure_security.md  compare_model_safety.md  detect_model_jailbreaks.md  generate_model_card.md
src/benderbox/: __init__.py  config.py  dynamic_tests.py  infrastructure_tests.py  interactive.py  mcp_analyzer.py  mcp_server.py  sandbox_base.py  sandbox_cli.py  skill_analyzer.py
src/benderbox/analyzers/: __init__.py  behavior.py  comparative.py  context_analyzer.py  mcp_analyzer.py  mcp_client.py  mcp_interrogation.py  semantic.py  test_integration.py
src/benderbox/interrogation/: __init__.py  comparison.py  display.py  engine.py  followup.py  judge.py  persistent_probe.py  trend.py
src/benderbox/nlp/: __init__.py  analysis_bridge.py  command_mapper.py  context.py  conversation.py  embeddings.py  intent.py  interactive.py  llm_engine.py  persona.py  rag.py  response.py  rlm.py  workflows.py
src/benderbox/profiles/: __init__.py  loader.py
src/benderbox/reporting/: __init__.py  export.py  html_generator.py  index_generator.py  model_card.py  report_generator.py
src/benderbox/storage/: __init__.py  (+4 more)
tests/: __init__.py  conftest.py  phase10_test.py  phase11_test.py  phase9_test.py  sprint2_test.py  sprint3_test.py  sprint4_test.py  sprint5_test.py  sprint6_test.py  sprint7_test.py  sprint8_test.py  test_context_analyzer.py  test_malicious_mcp_server.py  test_mcp_analyzer.py  test_mcp_client.py  test_mcp_interrogation.py
tests/integration/: __init__.py  test_analysis.py  test_nlp_commands.py  test_reports.py  test_workflows.py
(+42 files in other folders)
