[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benderbox"
version = "3.0.0-alpha"
description = "AI Security Testing and Model Safety Framework - Offline-first platform for analyzing AI models and infrastructure"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "BenderBox Contributors"}
]
keywords = ["ai", "security", "testing", "llm", "model-safety", "mcp", "nlp", "offline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies
dependencies = [
    "pyyaml>=6.0",
    "aiosqlite>=0.19.0",
    # CLI and UI
    "click>=8.0.0",
    "rich>=13.0.0",
    # Model downloads (URL and Hugging Face support)
    "httpx>=0.25.0",
    "huggingface-hub>=0.20.0",
    # System information (accurate RAM detection)
    "psutil>=5.9.0",
]

[project.optional-dependencies]
# NLP dependencies for interactive chat with local LLM
# NOTE: llama-cpp-python requires Python <=3.12 for pre-built wheels
# On Python 3.13+, you need Visual Studio Build Tools to compile from source
nlp = [
    "llama-cpp-python>=0.2.0",
    "mcp>=0.1.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio",
    "black",
    "flake8",
    "mypy",
]
tui = [
    "textual>=0.40.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
# Windows tab completion (Unix has readline built-in)
readline = [
    "pyreadline3>=3.4.0; sys_platform == 'win32'",
]
all = [
    "benderbox[nlp,tui,web,readline]",
]

[project.urls]
Homepage = "https://github.com/r33n3/BenderBox"
Repository = "https://github.com/r33n3/BenderBox"
Documentation = "https://github.com/r33n3/BenderBox#readme"
Issues = "https://github.com/r33n3/BenderBox/issues"

[project.scripts]
# v3.0 main entry point
benderbox = "benderbox.ui.app:main"
# Legacy entry points
benderbox-legacy = "benderbox.sandbox_cli:main"
benderbox-interactive = "benderbox.interactive:main"
benderbox-mcp = "benderbox.mcp_server:main"
# v3.0 additional entry points
benderbox-chat = "benderbox.nlp.conversation:main"
benderbox-tui = "benderbox.ui.tui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
